plugins {
    id "java-library"
}

ext {
    lombokVersion = "1.18.22"

    springBootVersion = "2.4.13"
    servletVersion = "4.0.1"
    springfoxVersion = "3.0.0"
    mybatisPlusVersion = "3.5.1"

    // 需要兼容 org.springframework.boot:spring-boot-starter-validation 下的版本
    // org.hibernate.validator:hibernate-validator
    hibernateValidatorVersion = "6.1.7.Final"

    // 需要兼容 org.springframework.boot:spring-boot-starter 版本
    springCloudVersion = "2020.0.5"

    springDependencyManagementVersion = "1.0.11.RELEASE"

    poiVersion = "5.2.2"
    druidVersion = "1.2.8"
    minioVersion = "7.1.4"
    commonsTextVersion = "1.9"
    fastjsonVersion = "1.2.79"
    commonsCodecVersion = "1.15"
    aliyunSdkOssVersion = "3.14.0"
    commonsLang3Version = "3.12.0"
    googleAnnotationsVersion = "3.0.1"
    commonsCollections4Version = "4.4"
}

allprojects {

    apply plugin: "idea"

    sourceCompatibility = 8
    targetCompatibility = 8

    group "com.pongsky.kit"
    version "3.1.0-2.4.13"

    repositories {
        mavenLocal()
        maven { url "https://maven.aliyun.com/repository/central" }
        maven { url "https://maven.aliyun.com/repository/jcenter" }
        mavenCentral()
    }

}
